// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BrContainerUnorderedListComponent isPreview should add "hst-container-*" classes in preview 1`] = `
<div
  class="br-container-unordered-list hst-container"
  id="root1"
>
  
  <li
    class="hst-container-item"
  >
    
  </li>
  <li
    class="hst-container-item"
  >
    
  </li>
</div>
`;

exports[`BrContainerUnorderedListComponent should render a container 1`] = `
<div
  class="br-container-unordered-list"
  id="root0"
>
  
  <li>
    
  </li>
  <li>
    
  </li>
</div>
`;
